--- a/www/css/happinessjar.swatch.css
+++ b/www/css/happinessjar.swatch.css
@@ -87,8 +87,8 @@ label.ui-btn {
 -----------------------------------------------------------------------------------------------------------*/
 /* Class ui-btn-corner-all deprecated in 1.4 */
 .ui-corner-all {
-	-webkit-border-radius: .6em /*{global-radii-blocks}*/;
-	border-radius: .6em /*{global-radii-blocks}*/;
+	-webkit-border-radius: 0em /*{global-radii-blocks}*/;
+	border-radius: 0em /*{global-radii-blocks}*/;
 }
 /* Buttons */
 .ui-btn-corner-all,
@@ -124,19 +124,19 @@ label.ui-btn {
 /* Shadow
 -----------------------------------------------------------------------------------------------------------*/
 .ui-shadow {
-	-webkit-box-shadow: 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
-	-moz-box-shadow: 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
-	box-shadow: 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
+	-webkit-box-shadow: 0 0px 0px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
+	-moz-box-shadow: 0 0px 0px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
+	box-shadow: 0 0px 0px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
 }
 .ui-shadow-inset {
-	-webkit-box-shadow: inset 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
-	-moz-box-shadow: inset 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
-	box-shadow: inset 0 1px 3px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
+	-webkit-box-shadow: inset 0 0px 0px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
+	-moz-box-shadow: inset 0 0px 0px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
+	box-shadow: inset 0 0px 0px /*{global-box-shadow-size}*/ rgba(0,0,0,.2) /*{global-box-shadow-color}*/;
 }
 .ui-overlay-shadow {
-	-webkit-box-shadow: 0 0 12px 		rgba(0,0,0,.6);
-	-moz-box-shadow: 0 0 12px 			rgba(0,0,0,.6);
-	box-shadow: 0 0 12px 				rgba(0,0,0,.6);
+	-webkit-box-shadow: 0 0 0px 		rgba(0,0,0,.6);
+	-moz-box-shadow: 0 0 0px 			rgba(0,0,0,.6);
+	box-shadow: 0 0 0px 				rgba(0,0,0,.6);
 }
 /* Icons
 -----------------------------------------------------------------------------------------------------------*/
@@ -374,9 +374,9 @@ html .ui-body-a .ui-focus,
 html body .ui-group-theme-a .ui-focus,
 html head + body .ui-btn-a.ui-focus,
 html head + body .ui-body-a.ui-focus {
-	-webkit-box-shadow: 0 0 12px #7d70ba /*{a-active-background-color}*/;
-	-moz-box-shadow: 0 0 12px #7d70ba /*{a-active-background-color}*/;
-	box-shadow: 0 0 12px #7d70ba /*{a-active-background-color}*/;
+	-webkit-box-shadow: 0 0 0px #7d70ba /*{a-active-background-color}*/;
+	-moz-box-shadow: 0 0 0px #7d70ba /*{a-active-background-color}*/;
+	box-shadow: 0 0 0px #7d70ba /*{a-active-background-color}*/;
 }
 /* Structure */
 /* Disabled
@@ -423,4 +423,64 @@ button[disabled],
 	border-color: #545454!important;
 	color: #FFF!important;
 	text-shadow: 0px 1px 0px #444!important;
+}
+
+.ui-input-text, .ui-input-search {
+	border-style: none;
+	margin: 0em 0px;
+	border-width: 0px;
+}
+
+.ui-content {
+	padding: 0.2em 0.2em 1em;
+}
+
+.ui-listview > .ui-li-static.ui-last-child, .ui-listview > .ui-li-divider.ui-last-child, .ui-listview > li.ui-last-child > a.ui-btn {
+	border-bottom-width: 0px;
+}
+
+.ui-listview > .ui-li-static, .ui-listview > .ui-li-divider, .ui-listview > li > a.ui-btn {
+	border-width: 0px 0px 0px;
+	border-style: solid;
+}
+
+.ui-listview > li > p {
+	border-width: 0px 0px 1px;
+	padding-bottom: 1em;
+	border-style: solid;
+}
+
+.ui-listview > .ui-li-static {
+	padding: 0.7em 1em 0em;
+}
+
+.jumbotron {
+	padding-top: 1px;
+	padding-bottom: 1px;
+	margin-bottom: 0;
+}
+
+ul>li>div.jumbotron {
+	display: none;
+}
+
+.btn {
+	width: 100%;
+	text-align: center;
+	display: block;
+	font-weight: normal!important;
+	font-size: 1em!important;
+	margin: 1.5em 0;
+	border-radius: 0!important;
+}
+
+.btn-danger:hover, .btn-danger {
+	color: #FFF!important;
+	background-color: #C9302C!important;
+	border-color: #AC2925!important;
+}
+.btn-primary:hover, .btn-primary {
+	color: #FFF!important;
+	background-color: #7D70BA!important;
+	border-color: #443D66!important;
 }
