Removido do app todas as opções relacionadas à categorias. Inserido contador com limite de caracteres para salvar felicidades e migrado todo o backend do app para webservice.

--- a/platforms/android/assets/www/templates/happiness-menu.html
+++ b/platforms/android/assets/www/templates/happiness-menu.html
@@ -5,9 +5,9 @@
 <div class="row">
     <a class="waves-effect waves-light btn btn-full" href="#/happinessRandShow"><i class="material-icons left">&#xE8D0;</i>Ver uma felicidade</a>
 </div>
-<div class="row">
+<!--<div class="row">
     <a class="waves-effect waves-light btn btn-full" href="#/happinessConsultarLote"><i class="material-icons left">&#xE617;</i>Ver um Categoria</a>
 </div>
 <div class="row">
     <a class="waves-effect waves-light btn btn-full" href="#/happinessCategoriaList"><i class="material-icons left">&#xE617;</i>Cadastrar Categorias</a>
-</div>
+</div>-->
