--- a/platforms/android/assets/www/css/happinessJar.css
+++ b/platforms/android/assets/www/css/happinessJar.css
@@ -19,12 +19,12 @@ body {
     margin-top: 7px;
 }
 
-textarea.materialize-textarea {
-    padding: 0;
-    min-height: 2rem;
-}
-input:not([type]), input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea {
+input:not([type]), input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime], input[type=datetime-local], input[type=tel], input[type=number], input[type=search] {
     height: 2rem;
+}
+
+.character-counter {
+    margin-top: -20px!important;
 }
 
 .modal.bottom-sheet {
